# termos

./: .SOLID_ANALYSIS.md  .env  .gitignore  AGENTS.md  CLAUDE.md  CLAUDE.md.backup  Cargo.toml  DOCUMENTATION_UPDATES.md  DOCUMENTATION_UPDATE_SUMMARY.md  GEMINI.md  README.md  install.sh  test_rig_e2e.py
.claude/agents/: docs-updater.md  git-committer.md  rust-clippy-enforcer.md  rust-code-reviewer.md  uml-diagram-generator.md
.claude/skills/: microsoft-rust-guidelines.md  rig-rs.md
.github/workflows/: python-ci.yaml  rust-ci.yml
backend/: .env.example  .gitignore  CLAUDE.md  langgraph.json  main.py  pyproject.toml  start-services.sh
backend/.claude/: settings.local.json
backend/.devcontainer/: Dockerfile  devcontainer.json
backend/.langgraph_api/: .langgraph_ops.pckl
backend/docs/: auth_api.md  (+1 more)
crates/backend-engine/: Cargo.toml
crates/backend-engine/src/: adapters.rs  error.rs  ipc.rs  lib.rs  traits.rs  types.rs
crates/backend-engine/src/adapters/: http.rs  mock.rs  process.rs  rig.rs
crates/backend-engine/src/adapters/mock/: workflow.rs
crates/backend-engine/src/adapters/rig/: config.rs  engine.rs  orchestrator.rs  state.rs  tools.rs
crates/backend-engine/src/adapters/rig/tools/: ask_user.rs  mod.rs  shell.rs
crates/backend-engine/src/ipc/: protocol.rs  stdio.rs
crates/backend-engine/tests/: rig_integration.rs
crates/backend-state/: Cargo.toml
crates/backend-state/src/: lib.rs
crates/infraware-backend/: .env.example  .env.secrets.example  .gitignore  Cargo.toml
crates/infraware-backend/src/: error.rs  main.rs  state.rs
crates/infraware-backend/src/routes/: auth.rs  health.rs  threads.rs
crates/shared/: Cargo.toml
crates/shared/src/: events.rs  lib.rs  models.rs  status.rs
docs/: BACKEND_ARCHITECTURE.md  BACKEND_RUST_PLAN.md  CODE_REVIEW_PLAN.md  GETTING_STARTED.md  RIGENGINE_PLAN.md  arena-mode.md  design-patterns.md  incident-investigation.md  memory-system.md  pty-backends.md
src/: agent.rs  app.rs  args.rs  config.rs  engine.rs  lib.rs  llm.rs  main.rs  markdown.rs  pty.rs  session.rs  state.rs  ui.rs
terminal-app/: .env  .env.example  .gitignore  CLAUDE.md  CODE_REVIEW.md  Cargo.toml  GEMINI.md  README.md  deny.toml  infraware_terminal_project_brief.md  lcov.info
terminal-app/.claude/: settings.local.json
terminal-app/.claude/agents/: code-metrics-analyzer.md  rust-clippy-enforcer.md  rust-code-reviewer.md
terminal-app/.github/workflows/: ci.yml
terminal-app/benches/: scan_benchmark.rs
terminal-app/config/: language.toml
terminal-app/docs/: CODE_METRICS_REPORT.md  DIAGRAMS_INDEX.md  DIAGRAM_QUICK_REFERENCE.md  INDEX.md  INTERACTIVE_COMMANDS_ARCHITECTURE.md  INTERACTIVE_COMMANDS_PLAN.md  MANIFEST_UML_UPDATES.txt  PERFORMANCE_OPTIMIZATION_PLAN.md  QUICK_REFERENCE_SCROLLING.md  README_UML_UPDATES.md  SCAN_ARCHITECTURE.md  SCAN_IMPLEMENTATION_PLAN.md  SCROLLING_ARCHITECTURE.md  SUPPORTED_COMMANDS.md  UML_DIAGRAMS.md  UML_UPDATE_SUMMARY.md  architecture.puml  command_executor.puml  data_flow.puml  design-patterns.md  design_patterns.puml  executor_module.puml  input_module.puml  interactive_command_flow.puml  llm_module.puml  orchestration_architecture.puml  orchestrators_module.puml  terminal_module.puml  terminal_ui_architecture.puml
terminal-app/docs/design-patterns/: chain-of-responsibility.md  design-patterns.md
terminal-app/docs/plans/: PTY_IMPLEMENTATION_PLAN.md
terminal-app/docs/uml/: 00-architecture-overview.puml  00-main-application-architecture.puml  01-pty-module.puml  01-scan-algorithm-10-handlers.puml  02-patterns-and-caches.puml  02-terminal-module.puml  03-executor-module.puml  03-orchestrators-and-workflows.puml  03-state-machine.puml  04-data-flow.puml  04-terminal-state-and-buffers.puml  05-llm-integration.puml  05-orchestrators.puml  05-render-pipeline.puml  06-complete-class-diagram.puml  07-data-flow-pipeline.puml  DIAGRAMS_INDEX_UPDATED.md  GENERATION-REPORT.md  INDEX.md  MANIFEST.md  README.md  README_UPDATED.md  TERMINAL_MODULE_DIAGRAMS.md  THROBBER_ANIMATION_DIAGRAMS.md  THROBBER_DIAGRAMS_INDEX.md  animation-lifecycle.puml  class-diagram.puml  command_execution_decision_tree.puml  executor.puml  input.puml  interactive_vs_noninteractive.puml  llm-query-sequence-diagram.puml  llm.puml  main-application.puml  orchestrators.puml  render-loop-architecture.puml  terminal-buffer-components.puml  terminal-event-handling.puml  terminal-module-overview.puml  terminal-state-management.puml  (+6 more)
terminal-app/src/: app.rs  config.rs  engine.rs  input.rs  lib.rs  llm.rs  logging.rs  main.rs  pty.rs  session.rs  state.rs  terminal.rs  ui.rs
terminal-app/src/app/: behavior.rs  clipboard.rs  hitl_handler.rs  input_handler.rs  llm_controller.rs  llm_event_handler.rs  render.rs  session_manager.rs  state.rs  terminal_renderer.rs  tiles_manager.rs
terminal-app/src/auth/: authenticator.rs  config.rs  mod.rs  models.rs
terminal-app/src/config/: language.rs  mod.rs
terminal-app/src/executor/: command.rs  completion.rs  facade.rs  install.rs  job_manager.rs  mod.rs  package_manager.rs
terminal-app/src/input/: application_builtins.rs  classifier.rs  discovery.rs  handler.rs  history_expansion.rs  keyboard.rs  known_commands.rs  mod.rs  multiline.rs  output_capture.rs  parser.rs  patterns.rs  prompt_detector.rs  selection.rs  shell_builtins.rs  typo_detection.rs
terminal-app/src/llm/: client.rs  incremental_renderer.rs  mod.rs  renderer.rs
terminal-app/src/orchestrators/: command.rs  hitl.rs  mod.rs  natural_language.rs  tab_completion.rs
terminal-app/src/pty/: io.rs  manager.rs  mod.rs  session.rs  traits.rs
terminal-app/src/terminal/: buffers.rs  cell.rs  events.rs  grid.rs  handler.rs  mod.rs  splash.rs  state.rs  throbber.rs  tui.rs
terminal-app/src/ui/: mod.rs  prompt.rs  renderer.rs  scrollbar.rs  theme.rs
terminal-app/src/utils/: ansi.rs  errors.rs  message.rs  mod.rs
terminal-app/tests/: classifier_tests.rs  executor_tests.rs  integration_tests.rs  interactive_command_test.rs  terminal_state_tests.rs
tests/: classifier_tests.rs  executor_tests.rs  integration_tests.rs
(+198 files in other folders)
