[package]
name = "infraware-terminal"
version = "0.2.0"
edition = "2024"
license = "MIT"

[lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "forbid"
unused_lifetimes = "warn"

[lints.clippy]
all = "warn"
complexity = "warn"
correctness = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"
mod_module_files = "warn"

[dependencies]
# GUI
egui = "0.33.3"
eframe = { version = "0.33.3", default-features = false, features = [
    "default_fonts",
    "glow",
    "x11",
] }
egui_tiles = "0.14.1"

# Terminal
portable-pty = "0.9.0"
vte = "0.15"

# Async
tokio = { version = "1.49.0", features = [
    "rt-multi-thread",
    "sync",
    "time",
    "macros",
    "io-util",
    "process",
    "signal",
] }
tokio-util = { version = "0.7.18", features = ["codec"] }
async-trait = "0.1.86"
async-stream = "0.3.6"
futures = "0.3.31"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Utilities
dotenvy = "0.15.7"
regex = "1.11"
uuid = { version = "1.12", features = ["v4", "serde"] }
image = { version = "0.25", default-features = false, features = ["png"] }
which = "8.0"
ctrlc = "3.4"
once_cell = "1.20"
smallvec = "1.13"
mimalloc = "0.1"
bitflags = "2.9"
arboard = "3.4"
syntect = { version = "5.3.0", features = ["default-fancy"] }

# AI / LLM (optional, behind rig feature)
rig-core = { version = "0.28", optional = true }
chrono = { version = "0.4", optional = true, features = ["serde"] }
schemars = { version = "0.8", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["signal", "process"] }

[dev-dependencies]
tempfile = "3"

[features]
default = ["rig"]
rig = ["dep:chrono", "dep:rig-core", "dep:schemars"]

# Optimize dev builds for acceptable frame rates in GUI applications.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[profile.release]
strip = true
lto = true
codegen-units = 1
