[package]
name = "infraware-terminal"
version = "0.2.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1"
arboard = "3"
async-stream = "0.3"
async-trait = "0.1"
bitflags = "2"
chrono = { version = "0.4", optional = true, features = ["serde"] }
ctrlc = "3"
dotenvy = "0.15"
eframe = { version = "0.33", default-features = false, features = [
  "default_fonts",
  "glow",
  "x11",
] }
egui = "0.33"
egui_tiles = "0.14"
futures = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }
mimalloc = "0.1"
once_cell = "1.20"
portable-pty = "0.9.0"
regex = "1"
rig-core = { version = "0.28", optional = true }
schemars = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1"
syntect = { version = "5", features = ["default-fancy"] }
thiserror = "1"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "sync",
  "time",
  "macros",
  "io-util",
  "process",
  "signal",
] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
vte = "0.15"
which = "8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["signal", "process"] }

[dev-dependencies]
tempfile = "3"

[features]
default = ["rig"]
rig = ["dep:chrono", "dep:rig-core", "dep:schemars"]

[lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "forbid"
unused_lifetimes = "warn"

[lints.clippy]
all = "warn"
complexity = "warn"
correctness = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"
mod_module_files = "warn"

# Optimize dev builds for acceptable frame rates in GUI applications.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[profile.release]
strip = true
lto = true
codegen-units = 1
