[package]
name = "infraware-terminal"
version = "0.2.0"
edition = "2021"
license = "MIT"

[lints.rust]
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "allow"
unsafe_op_in_unsafe_fn = "forbid"
unused_lifetimes = "warn"

[lints.clippy]
all = "warn"
pedantic = "allow"

[dependencies]
# GUI (replacing ratatui/crossterm)
egui = "0.33.3"
eframe = { version = "0.33.3", default-features = false, features = ["default_fonts", "glow", "x11"] }

# PTY
portable-pty = "0.9.0"

# Async runtime
tokio = { version = "1.48.0", features = ["rt-multi-thread", "sync", "time", "macros"] }


# LLM client
reqwest = { version = "0.13.1", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }

# Error handling
anyhow = "1.0.100"

# Logging
log = "0.4.29"
env_logger = "0.11.8"

# Utilities
which = "8.0"
hostname = "0.4"
vte = "0.15"
ctrlc = "3.4"

# Clipboard (direct OS access, bypasses egui's delayed sync)
arboard = "3.4"
serde_json = "1.0.148"
async-trait = "0.1.89"
futures = "0.3.31"
tokio-util = "0.7.17"
syntect = { version = "5.3.0", features = ["default-fancy"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["signal", "process"] }

[dev-dependencies]

[profile.release]
strip = true
lto = true
codegen-units = 1
