[package]
name = "infraware-terminal"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# Internal crates
infraware-shared = { workspace = true }

# GUI
egui = "0.33.3"
eframe = { version = "0.33.3", default-features = false, features = ["default_fonts", "glow", "x11"] }

# PTY
portable-pty = "0.9.0"

# Async runtime
tokio = { workspace = true }

# LLM client
reqwest = { version = "0.13.1", features = ["json", "stream"] }
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
log = { workspace = true }
env_logger = { workspace = true }

# Environment
dotenvy = "0.15"

# Utilities
which = "8.0"
hostname = "0.4"
vte = "0.15"
ctrlc = "3.4"
regex = "1.11"
once_cell = "1.20"

# Clipboard (direct OS access, bypasses egui's delayed sync)
arboard = "3.4"
async-trait = { workspace = true }
futures = { workspace = true }
tokio-util = "0.7.17"
syntect = { version = "5.3.0", features = ["default-fancy"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["signal", "process"] }

[dev-dependencies]
