[package]
name = "infraware-terminal"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# Internal crates
infraware-engine = { workspace = true, features = ["rig"] }

# GUI3
egui = "0.33.3"
eframe = { version = "0.33.3", default-features = false, features = ["default_fonts", "glow", "x11"] }
egui_tiles = "0.14.1"

# PTY
portable-pty = "0.9.0"

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Environment
dotenvy = "0.15"

# Utilities
image = { version = "0.25", default-features = false, features = ["png"] }
which = "8.0"
vte = "0.15"
ctrlc = "3.4"
regex = "1.12"
once_cell = "1.20"
smallvec = "1.13"
mimalloc = "0.1"
bitflags = "2.9"

# Clipboard (direct OS access, bypasses egui's delayed sync)
arboard = "3.4"
async-trait = { workspace = true }
futures = { workspace = true }
tokio-util = "0.7.18"
syntect = { version = "5.3.0", features = ["default-fancy"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["signal", "process"] }

[features]
default = ["rig"]
rig = ["infraware-engine/rig"]

[dev-dependencies]
