[package]
name = "infraware-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agentic engine abstraction for Infraware backend"

[lints]
workspace = true

[dependencies]
infraware-shared = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# For HTTP adapter (optional feature)
reqwest = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }

# For Rig adapter (optional feature)
chrono = { workspace = true, optional = true, features = ["serde"] }
rig-core = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
http = ["reqwest", "bytes"]
process = []
rig = ["dep:chrono", "dep:rig-core", "dep:regex", "dep:schemars"]
