[package]
name = "infraware-state"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "State management for Infraware backend"

[lints]
workspace = true

[dependencies]
infraware-shared = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
