[package]
name = "infraware-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Axum-based backend API for Infraware"

[lints]
workspace = true

[[bin]]
name = "infraware-backend"
path = "src/main.rs"

[dependencies]
infraware-shared = { workspace = true }
infraware-engine = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true, features = ["full"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
dotenvy = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# OpenAPI / Documentation
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

# Metrics
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

[features]
default = ["rig"]
rig = ["infraware-engine/rig"]
