[package]
name = "infraware-shared"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types for Infraware terminal and backend"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
